--- a/env.example
+++ b/env.example
@@ -2,12 +2,13 @@
 ENVIRONMENT=development
 DEBUG=true
 
-# Configuration de la base de données PostgreSQL
-DB_HOST=localhost
-DB_PORT=5432
-DB_USER=sogood_user
-DB_PASSWORD=sogood_password
-DB_NAME=sogood_db
+# Configuration de Cassandra
+CASSANDRA_HOSTS=localhost
+CASSANDRA_PORT=9042
+CASSANDRA_USERNAME=cassandra
+CASSANDRA_PASSWORD=cassandra
+CASSANDRA_KEYSPACE=sogood
+CASSANDRA_DATACENTER=datacenter1
 
 # Configuration du serveur
 HOST=0.0.0.0
