--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,9 @@ fastapi==0.104.1
 uvicorn[standard]==0.24.0
 python-multipart==0.0.6
 
-# Base de données PostgreSQL
-sqlalchemy==2.0.23
-psycopg2-binary==2.9.9
-alembic==1.12.1
+# Base de données Cassandra
+cassandra-driver==3.28.0
+cqlengine==0.21.0
 
 # Validation de données
 pydantic==2.5.0
