--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ email-validator==2.1.0
 # Traitement de données
 pandas==2.1.3
 numpy==1.25.2
-requests==2.31.0
+requests
 
 # Machine Learning
 scikit-learn==1.3.2
