--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,25 @@
-# FastAPI et serveur
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-python-multipart==0.0.6
+# --- Web App (Flask frontend) ---
+Flask==2.3.3
+requests==2.32.2
+gunicorn==21.2.0  # Optional for deployment
 
-# Base de données Cassandra
-cassandra-driver==3.28.0
-cqlengine==0.21.0
+# --- ML & Data ---
+tensorflow==2.15.0
+numpy==1.26.4
+pandas==2.2.2
 
-# Validation de données
-pydantic==2.5.0
-pydantic-settings==2.1.0
-email-validator==2.1.0
+# --- PySpark ---
+pyspark==3.5.1
 
-# Traitement de données
-pandas==2.1.3
-numpy==1.25.2
-requests
+# --- Apache Cassandra driver ---
+cassandra-driver==3.29.1
 
-# Machine Learning
-scikit-learn==1.3.2
-joblib==1.3.2
+# --- Testing ---
+pytest==8.2.1
 
-# Outils utilitaires
-python-dotenv==1.0.0
-logging-config==1.0.3
-typer==0.9.0
-rich==13.6.0
+# --- Notebook (optional) ---
+jupyterlab
+ipykernel
 
-# Tests
-pytest==7.4.3
-pytest-asyncio==0.21.1
-httpx==0.25.2 
+# --- Others (adjust if needed) ---
+scikit-learn==1.5.0  # If used
